--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="button">
                         <button>CONTACT ME</button>
                     </div>
-                    <a href="https://facebook.com/yourprofile" target="_blank" class="social-icon facebook">
+                    <a href="https://www.facebook.com/francine.espana.77" target="_blank" class="social-icon facebook">
                         <i class="fab fa-facebook"></i>
                     </a>
                 </div>
