--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
                     <h3>Messenger UI</h3>
                     <p>Creating intuitive user interfaces with focus on user experience, accessibility, and modern design principles.</p>
                 </div>
+                 <div class="skill-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+                    <img src="cert.jpg" alt="cert" class="project-image">
+                    <h3>System Certificate</h3>
+                    <p>Best in system Innovation</p>
+                </div>
             </div>
         </div>
     </section>
