--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
                     <h3>System Certificate</h3>
                     <p>Best in system Innovation</p>
                 </div>
+                 <div class="skill-item" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
+                    <img src="certs.jpg" alt="certs" class="project-image">
+                    <h3>ICT Certificate</h3>
+                    <p>ICT certification Seminar</p>
+                </div>
             </div>
         </div>
     </section>
